manifests/envoy-gateway/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: eg
      app.kubernetes.io/name: gateway-helm
      control-plane: envoy-gateway
  ingress:
    # grpc
    - fromEndpoints:
        # proxy
        - matchLabels:
            app.kubernetes.io/managed-by: envoy-gateway
            app.kubernetes.io/name: envoy
            app.kubernetes.io/component: proxy
      toPorts:
        - ports:
          - port: grpc
            protocol: TCP
    # webhook
    - fromEntities: [host, remote-node]
      toPorts:
        - ports:
            - port: webhook
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-proxy-metrics
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/managed-by: envoy-gateway
      app.kubernetes.io/component: proxy
      app.kubernetes.io/name: envoy
  ingress:
    - fromEntities: [cluster]
      toPorts:
        - ports:
            - port: metrics
              protocol: TCP
          rules:
            http:
              - method: GET
                path: /stats/prometheus
